# catomatic

./: .gitignore  README.md  coverage.xml  env.yml  environment.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  test_env.yml
.github/workflows/: ci.yml  mypy.yml  pypi.yaml
data/: bdq_wildcards.json  demo_wildcards.json  samples.csv
examples/: catalogue.csv  demo.ipynb  lab_demo.ipynb  utils.py
examples/temp/: catalogue_10.csv  catalogue_11.csv  catalogue_12.csv  catalogue_13.csv  catalogue_15.csv  catalogue_20.csv  catalogue_25.csv  catalogue_30.csv  catalogue_35.csv  catalogue_40.csv  catalogue_45.csv  catalogue_50.csv  catalogue_55.csv  catalogue_60.csv  catalogue_65.csv  catalogue_70.csv  catalogue_75.csv  catalogue_80.csv  catalogue_85.csv  catalogue_90.csv  catalogue_95.csv  demo_catalogue.csv  rule.csv
src/catomatic/: BinaryBuilder.py  BinaryCatalogue.py  CatalogueBuilder.py  Ecoff.py  PiezoTools.py  RegressionBuilder.py  RegressionCatalogue.py  __init__.py  __main__.py  cli.py  cli_module.py  defence_module.py
src/tests/: test_BuildBinaryCatalogue.py  test_BuildCatalogue.py  test_BuildRegressionCatalogue.py  test_GenerateEcoff.py
src/tests/data/: phenotypes.json
tests/: test_BuildCatalogue.py
tests/data/: mutations.json
